# socketio_proxy

./: .gitignore  README.md  config.yaml.example  proxy.ipynb  pyproject.toml  requirements.txt  run.sh  setup.py
bc_plugins/: bc_event_preprocessor.py  bc_http_api.py
example_plugins/: example_event_preprocessor.py  example_http_api.py
src/: __init__.py  main.py
src/config/: logging.py  settings.py
src/core/: proxy_builder.py  proxy_server.py  socketio_client.py
src/handlers/: dispatch_handler.py  dispatchers.py  event_handler.py  event_handler_manager.py
src/handlers/dispatchers/: file_dispatcher.py  http_dispatcher.py  manager.py  websocket_dispatcher.py
src/handlers/event_preprocessors/: base.py  chat_message_handler.py  manager.py
src/handlers/preprocessors/: base.py  chat_message_handler.py  manager.py
src/socketio_proxy/: __init__.py  main.py
src/socketio_proxy/core/: proxy_builder.py  proxy_server.py  socketio_client.py
src/socketio_proxy/handlers/: event_handler.py  event_handler_manager.py
src/socketio_proxy/util/: kvlite.py  reflection_manager.py
src/socketio_proxy/web/: dependencies.py  route_manager.py  routes.py  websocket_manager.py
src/util/: __init__.py  reflect_manager.py  reflection_manager.py
src/web/: dependencies.py  route_manager.py  routes.py
src/web_client/static/: event_bus.js  event_filter.js  json_message_sender.js  main.js  message_builder_ui.js  message_builders.js  message_display.js  message_formatters.js  services.js  style.css  tabs.js
src/web_client/templates/: index.html
(+10 files in other folders)
